--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -76,7 +76,39 @@
         </div>
         <div id="jobs" class="container tab-pane fade"><br>
           <h1 class="fw-bold text-center">PAST EMPLOYMENTS</h1><br>
-          <h4 class="text-center"></h4>
+          <h4 class="text-center">Here is a list of my past employments: how long I worked there,
+          what position I held, and a short description of the job</h4>
+          <table class="table table-borderless table-striped>
+            <thead>
+              <tr>
+                <th>JOB/TITLE</th>
+                <th>LENGTH OF EMPLOYMENT</th>
+                <th>DESCRIPTION OF POSITION</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Farmhand</td>
+                <td>21 years</td>
+                <td>I grew up on a farm and have helped with various tasks throughout my life.</td>
+              </tr>
+              <tr>
+                <td>Cook</td>
+                <td>2 months</td>
+                <td>I worked at a local pub during high school right before the COVID-19 pandemic.</td>
+              </tr>
+              <tr>
+                <td>NHS Member</td>
+                <td>6 years</td>
+                <td>Through middle and high school, I was a member of my local chapter of the National Honor Society.</td>
+              </tr>
+              <tr>
+                <td>Lorem Ipsum</td>
+                <td>Lorem Ipsum</td>
+                <td>Added this row to make it look more full on the page</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
