--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -78,7 +78,7 @@
           <h1 class="fw-bold text-center">PAST EMPLOYMENTS</h1><br>
           <h4 class="text-center">Here is a list of my past employments: how long I worked there,
           what position I held, and a short description of the job</h4>
-          <table class="table table-borderless table-striped>
+          <table class="table table-borderless table-striped">
             <thead>
               <tr>
                 <th>JOB/TITLE</th>
