--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -37,7 +37,7 @@
         </div>
         <div id="skills" class="container tab-pane fade"><br>
           <h1 class="fw-bold text-center">SKILLS AND HOBBIES</h1><br>
-          <h4 class="text-center">Some hobbies and skills I have are:</h4>
+          <h4 class="text-center">Some hobbies and skills I have are:</h4><br>
           <ul class="list-group">
             <li class="list-group-item border-0 bg-success text-uppercase">
               <span class="badge bg-dark rounded-pill"> </span>
