--- a/aboutMeResponsive.html
+++ b/aboutMeResponsive.html
@@ -36,7 +36,7 @@
                                    a list of some of my hobbies, interests, skills, and past employments. </h4>
         </div>
         <div id="skills" class="container tab-pane fade"><br>
-          <h1 class="fw-bold text-center">SKILLS AND HOBBIES</h1><br>
+          <h1 class="fw-bold text-center">SKILLS AND HOBBIES</h1>
           <h4 class="text-center">Some hobbies and skills I have are:</h4><br>
           <ul class="list-group">
             <li class="list-group-item border-0 bg-success text-uppercase">
@@ -77,7 +77,7 @@
         <div id="jobs" class="container tab-pane fade"><br>
           <h1 class="fw-bold text-center">PAST EMPLOYMENTS</h1><br>
           <h4 class="text-center">Here is a list of my past employments: how long I worked there,
-          what position I held, and a short description of the job</h4>
+          what position I held, and a short description of the job</h4><br>
           <table class="table table-borderless table-striped">
             <thead>
               <tr>
